--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,35 @@ body {
   color: #434455;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
+.container {
+  /* width: 100%; */
+  /* max-width: 1158px; */
+}
+
 /* =================HEADER==================== */
 /* HEADER SECTION */
+.header-container {
+  padding: 24px 156px;
+}
 
 .nav-logo-link {
   color: #4d5ae5;
@@ -56,6 +83,11 @@ body {
 
 /* ================MAIN================= */
 /*MAIN-SECTION*/
+.hero-container {
+  padding-top: 188px;
+  padding-bottom: 188px;
+  /* text-align: center; */
+}
 
 .hero {
   background-color: #2e2f42;
@@ -68,7 +100,8 @@ body {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  text-align: center;
+  margin-bottom: 48px;
+  max-width: 496px;
 }
 .hero-btn {
   background-color: #4d5ae5;
