--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,13 @@ img {
 
 /* =================HEADER==================== */
 /* HEADER SECTION */
+.header-section {
+  padding: 24px 15px;
+}
+
 .header-container {
-  padding: 24px 156px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav-logo-link {
@@ -52,6 +57,15 @@ img {
   color: #2e2f42;
 }
 
+.header-navigation {
+  display: flex;
+  gap: 76px;
+}
+
+.header-navigation-list {
+  display: flex;
+  gap: 40px;
+}
 .nav-link {
   color: #2e2f42;
   font-family: inherit;
@@ -77,6 +91,12 @@ img {
   font-style: normal;
 }
 
+.header-address-list {
+  display: flex;
+  gap: 40px;
+  /* justify-content: flex-end; */
+}
+
 .address-link {
   color: currentColor;
   font-family: "Roboto", sans-serif;
@@ -87,7 +107,7 @@ img {
 
 /* ================MAIN================= */
 /*MAIN-SECTION*/
-/* знайти спосіб центрувати заголовок-1 */
+/* знайти спосіб центрувати заголовок-1: знайшла за допомогою марджин: 0 авто */
 .hero-container {
   padding-top: 188px;
   padding-bottom: 188px;
@@ -105,10 +125,15 @@ img {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  margin-bottom: 48px;
+  margin: 0 auto;
   max-width: 496px;
+  margin-bottom: 48px;
 }
 .hero-btn {
+  display: inline-flex;
+  align-items: flex-start;
+  gap: 10px;
+
   background-color: #4d5ae5;
   color: #ffffff;
   font-family: "Roboto", sans-serif;
@@ -117,6 +142,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
+  border-radius: 4px;
 }
 
 .hero-btn:hover,
@@ -147,10 +173,16 @@ img {
 }
 
 .purpose-container {
-  padding: 120px 156px;
+  padding: 120px 15px;
 }
 
+.list-purpose-container {
+  display: flex;
+}
 .our-purpose-list {
+  display: flex;
+  gap: 24px;
+  flex-basis: calc((100% - 72) / 4);
 }
 .purpose-item {
   font-family: inherit;
@@ -186,6 +218,10 @@ img {
   padding: 120px 156px;
 }
 
+.oteam-container {
+  display: flex;
+}
+
 .oteam-main-title {
   color: #2e2f42;
   font-size: 36px;
@@ -197,14 +233,23 @@ img {
   margin-bottom: 72px;
 }
 
+.oteam-list {
+  display: flex;
+  gap: 24px;
+  flex-basis: calc((100% - 72px) / 4);
+}
+
 .oteam-item {
   background-color: #ffffff;
 }
 
 .oteam-loved {
-  margin-bottom: 32px;
 }
 
+.oteam-description {
+  padding: 32px 0;
+  text-align: center;
+}
 .our-team-title {
   color: #2e2f42;
   font-size: 20px;
