--- a/css/styles.css
+++ b/css/styles.css
@@ -37,11 +37,17 @@ img {
 /* HEADER SECTION */
 .header-section {
   padding: 24px 15px;
+  border-bottom: 1px solid #E7E9FC;
 }
 
 .header-container {
   display: flex;
   justify-content: space-between;
+}
+
+.header-navigation {
+  align-items: center;
+
 }
 
 .nav-logo-link {
@@ -52,6 +58,7 @@ img {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 
 .nav-studio-link {
@@ -60,7 +67,7 @@ img {
 
 .header-navigation {
   display: flex;
-  gap: 76px;
+  /* gap: 76px; */
 }
 
 .header-navigation-list {
@@ -74,6 +81,7 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding: 24px 0;
 }
 
 .nav-link:hover,
@@ -322,12 +330,11 @@ img {
 
 .foot-section {
   background-color: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  padding-left: 156px;
+  padding: 100px 0;
 }
 
 .foot-logo-link {
+  display: inline-block;
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
@@ -335,7 +342,7 @@ img {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-bottom: 18px;
+  margin-bottom: 16px;
 }
 
 .logo-lightcolor {
