--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,7 @@ img {
 
 .hero {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 
 .hero-title {
@@ -139,9 +140,9 @@ img {
   margin-bottom: 48px;
 }
 .hero-btn {
-  display: inline-flex;
-  align-items: flex-start;
-  gap: 10px;
+  display: block;
+  min-width: 169px;
+  height: 56px;
 
   background-color: #4d5ae5;
   color: #ffffff;
@@ -151,6 +152,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
+  border: none;
   border-radius: 4px;
 }
 
