--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,7 @@ img {
 
 .oteam {
   background-color: #f4f4fd;
-  padding: 120px 156px;
+  padding: 120px 0;
 }
 
 .oteam-container {
@@ -248,11 +248,13 @@ img {
 .oteam-list {
   display: flex;
   gap: 24px;
-  flex-basis: calc((100% - 72px) / 4);
 }
 
 .oteam-item {
   background-color: #ffffff;
+
+  width: calc((100% - 72px) / 4);
+  border-radius: 0 0 4px 4px;
 }
 
 .oteam-loved {
@@ -261,6 +263,7 @@ img {
 .oteam-description {
   padding: 32px 0;
   text-align: center;
+  
 }
 .our-team-title {
   color: #2e2f42;
@@ -268,6 +271,7 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  /* text-align: center; */
   margin-bottom: 8px;
 }
 
