--- a/css/styles.css
+++ b/css/styles.css
@@ -247,14 +247,19 @@ img {
 
 .oteam-list {
   display: flex;
-  gap: 24px;
+  /* gap: 24px; */
 }
 
 .oteam-item {
   background-color: #ffffff;
-
-  width: calc((100% - 72px) / 4);
+  
   border-radius: 0 0 4px 4px;
+  margin-right: 24px;
+  width: calc((100% - 72px) / 4);
+}
+
+.oteam-item:last-child {
+  margin-bottom: 0;
 }
 
 .oteam-loved {
@@ -284,13 +289,9 @@ img {
 
 /* SECTION 4 */
 .oportfolio-section {
-  padding: 120px 156px;
+  padding: 120px 0;
 }
 
-.container-portfolio-list {
-  display: flex;
-  
-}
 .oportfolio-main-title {
   color: #2e2f42;
   font-size: 36px;
@@ -305,18 +306,19 @@ img {
 .oportfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
-  flex-basis: calc((100% - 48px) / 3);
+  column-gap: 24px;
+  row-gap: 48px;
 }
-.oportfolio-loved {
+.oportfolio-item {
+  width: calc((100% - 48px) / 3);
 }
 
 .oportfolio-description {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 16px;
   border: 1px solid #E7E9FC;
-  border-top: 0;
+  border-top: none;
 }
+
 .oportfolio-title {
   color: #2e2f42;
   font-size: 20px;
