--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,7 @@ img {
   max-width: 496px;
   margin-bottom: 48px;
 }
+
 .hero-btn {
   display: block;
   min-width: 169px;
@@ -161,12 +162,9 @@ img {
   background-color: #404bbf;
 }
 
-/* .hero {
-  background-color: #2e2f42;
-} */
 
 /*SECTION 2 - hidden title*/
-/* visually hidden не пропускає автоперевірка  */
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -184,27 +182,17 @@ img {
   padding: 120px 0;
 }
 
-.purpose-container {
-}
-
-.list-purpose-container {
-  
-}
 .our-purpose-list {
   display: flex;
-  flex-direction: row;
-  /* flex-wrap: nowrap;
-  align-content: flex-start;
-  justify-content: flex-start;
-  align-items: flex-start; */
+  /* flex-direction: row; */
+  gap: 24px;
 }
-.purpose-item {
+
+.our-purpose-list .purpose-item {
   font-family: inherit;
   color: currentColor;
-
-  /* max-width: 264px;
-  gap: 24px; */
-  width: calc((100% - 72) / 4);
+  width: calc((100% - 72px) / 4);
+  align-self: auto;
 }
 
 .purpose-title {
@@ -255,7 +243,7 @@ img {
   
   border-radius: 0 0 4px 4px;
   margin-right: 24px;
-  width: calc((100% - 72px) / 4);
+  width:calc((100% - 72px) / 4);
 }
 
 .oteam-item:last-child {
@@ -309,6 +297,7 @@ img {
   column-gap: 24px;
   row-gap: 48px;
 }
+
 .oportfolio-item {
   width: calc((100% - 48px) / 3);
 }
