--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,8 @@ img {
   margin: 0 auto;
 }
 
-/* =================HEADER==================== */
-/* HEADER SECTION */
+/*?=================HEADER==================== */
+/*!HEADER SECTION */
 .header-section {
   padding: 24px 15px;
   border-bottom: 1px solid #E7E9FC;
@@ -47,7 +47,6 @@ img {
 
 .header-navigation {
   align-items: center;
-
 }
 
 .nav-logo-link {
@@ -67,7 +66,6 @@ img {
 
 .header-navigation {
   display: flex;
-  /* gap: 76px; */
 }
 
 .header-navigation-list {
@@ -114,9 +112,8 @@ img {
   letter-spacing: 0.02em;
 }
 
-/* ================MAIN================= */
-/*MAIN-SECTION*/
-/* знайти спосіб центрувати заголовок-1: знайшла за допомогою марджин: 0 авто */
+/*? ================MAIN================= */
+/*!MAIN-SECTION*/
 .hero-container {
   /* display: flex;
   text-align: center; */
@@ -163,8 +160,7 @@ img {
 }
 
 
-/*SECTION 2 - hidden title*/
-
+/*!SECTION 2 - hidden title*/
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -184,7 +180,6 @@ img {
 
 .our-purpose-list {
   display: flex;
-  /* flex-direction: row; */
   gap: 24px;
 }
 
@@ -211,15 +206,10 @@ img {
   letter-spacing: 0.02em;
 }
 
-/*SECTION 3 - OUR TEAM*/
-
+/*!SECTION 3 - OUR TEAM*/
 .oteam {
   background-color: #f4f4fd;
   padding: 120px 0;
-}
-
-.oteam-container {
-  display: flex;
 }
 
 .oteam-main-title {
@@ -235,22 +225,18 @@ img {
 
 .oteam-list {
   display: flex;
-  /* gap: 24px; */
+  gap: 24px;
 }
 
 .oteam-item {
   background-color: #ffffff;
   
   border-radius: 0 0 4px 4px;
-  margin-right: 24px;
-  width:calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .oteam-item:last-child {
   margin-bottom: 0;
-}
-
-.oteam-loved {
 }
 
 .oteam-description {
@@ -264,7 +250,6 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  /* text-align: center; */
   margin-bottom: 8px;
 }
 
@@ -275,7 +260,7 @@ img {
   letter-spacing: 0.02em;
 }
 
-/* SECTION 4 */
+/*! SECTION 4 */
 .oportfolio-section {
   padding: 120px 0;
 }
@@ -324,7 +309,7 @@ img {
   letter-spacing: 0.02em;
 }
 
-/* FOOTER SECTOIN */
+/*! FOOTER SECTOIN */
 
 .foot-section {
   background-color: #2e2f42;
